[REFACTOR] ALLOWED_IMAGE_EXTENSIONS 생성을 Arrays.asList() 로 수정